--- a/src/main/resources/assets/urushi/lang/zh_tw.json
+++ b/src/main/resources/assets/urushi/lang/zh_tw.json
@@ -1,5 +1,4 @@
 {
-
   "itemGroup.urushi": "漆MOD",
 
   "block.urushi.japanese_timber_bamboo": "桂竹",
@@ -881,6 +880,8 @@
   "item.urushi.tiny_black_dye": "小份黑色染料",
 
   "block.urushi.senbakoki": "千齒脫粒機",
+
+  "info.urushi.rawrice": "对千齒脫粒機使用稻穗可以獲得2個糙米",
 
   "info.urushi.rawurushi": "對割開的漆木原木使用碗以獲得",
 
@@ -1986,7 +1987,7 @@
 
     "info.urushi.rock": "放置於滴水石錐下方後會變成蝕刻石塊",
 
-    "info.urushi.sazare_ishi": "在石塊上方放置滴水石墜以獲得",
+    "info.urushi.sazare_ishi": "在石塊上方放置滴水石錐以獲得",
 
     "info.urushi.slot_rice_cauldron": "輸入：上面；輸出：其他面",
 
@@ -2332,7 +2333,7 @@
   "block.urushi.green_plaster_bars": "綠色灰泥屏風柱",
   "block.urushi.red_plaster_bars": "紅色灰泥屏風柱",
   "block.urushi.black_plaster_bars": "黑色灰泥屏風柱",
-  "block.urushi.horizontal_plaster_bars": "漆喰橫向屏風柱",
+  "block.urushi.horizontal_plaster_bars": "灰泥橫向屏風柱",
   "block.urushi.horizontal_orange_plaster_bars": "橙色灰泥橫向屏風柱",
   "block.urushi.horizontal_magenta_plaster_bars": "品紅色灰泥橫向屏風柱",
   "block.urushi.horizontal_light_blue_plaster_bars": "淡藍色灰泥橫向屏風柱",
@@ -2515,7 +2516,7 @@
    "info.urushi.mountain_creation_jufu2": "可以用來建造山峰或填埋地形。",
    "info.urushi.fluid_erasion_jufu1": "清除11×11區域範圍內的流體。",
    "info.urushi.spike_jufu1": "從地下生成鐵棘刺並對其上的生物造成傷害",
-   "info.urushi.spike_jufu2": "若有玩家位於鐵棘刺附近25格範圍內，則鐵棘刺造成的傷害將視為玩家造成的，且生物死亡時會掉落經驗及稀有掉落物等",
+   "info.urushi.spike_jufu2": "鐵棘刺造成的傷害視為玩家造成的，且生物死亡時會掉落經驗及稀有掉落物等",
    "info.urushi.freezing_jufu1": "令生物在5秒內無法移動",
    "block.urushi.green_tatami_slab": "綠色榻榻米半磚",
    "block.urushi.brown_tatami_slab": "棕色榻榻米半磚",
@@ -2547,6 +2548,319 @@
    "item.urushi.ghost_spawn_egg": "鬼魂刷怪蛋",
    "block.urushi.red_seigaiha_fusuma": "紅色青海波紙拉門",
    "block.urushi.red_sayagata_fusuma": "紅色絲綾紋紙拉門",
-   "config.jade.plugin_urushi.block_element": "元素"
+
+   // 以下，简中sync过来的东西。todo：繁中化、校对
+   "config.jade.plugin_urushi.block_element": "元素",
+   "item.urushi.shrimp": "虾",
+   "item.urushi.fried_shrimp": "炸虾",
+   "item.urushi.shrimp_sushi": "鲜虾寿司",
+   "entity.urushi.shrimp_sushi_food": "鲜虾寿司",
+   "info.urushi.doubled_wooden_cabinetry_sort_button": "整理",
+   "info.urushi.senbakoki": "对千齿脱粒机使用稻穗，可以获得糙米和稻杆",
+   "info.urushi.rice_ball": "合成时填入不同的馅料，吃下去就会发生什么事情……？",
+   "info.urushi.rice_ball_with_filling": "填入了馅料。吃下去时会发生什么呢？",
+   "block.urushi.kakejiku_15": "挂轴",
+   "block.urushi.kakejiku_16": "挂轴",
+   "block.urushi.kakejiku_17": "挂轴",
+   "block.urushi.kakejiku_18": "挂轴",
+   "block.urushi.kakejiku_19": "挂轴",
+   "block.urushi.tea_bush": "茶叶树丛",
+   "item.urushi.tea_leaf": "茶叶",
+   "item.urushi.green_tea": "绿茶",
+   "block.urushi.hibachi": "火盆",
+   "block.urushi.kettle": "茶壶",
+   "container.urushi.kettle": "茶壶",
+   "block.urushi.shiitake_block": "香菇块",
+   "block.urushi.coin": "古钱",
+   "info.urushi.kettle": "下方放置有火盆、营火、或土灶时，可以放入茶叶与水竹筒",
+   "item.urushi.silk": "绢布",
+   "item.urushi.white_silk": "白色绢布",
+   "item.urushi.orange_silk": "橙色绢布",
+   "item.urushi.magenta_silk": "品红色绢布",
+   "item.urushi.light_blue_silk": "淡蓝色绢布",
+   "item.urushi.yellow_silk": "黄色绢布",
+   "item.urushi.lime_silk": "黄绿色绢布",
+   "item.urushi.pink_silk": "粉色绢布",
+   "item.urushi.gray_silk": "灰色绢布",
+   "item.urushi.light_gray_silk": "淡灰色绢布",
+   "item.urushi.cyan_silk": "青色绢布",
+   "item.urushi.purple_silk": "紫色绢布",
+   "item.urushi.blue_silk": "蓝色绢布",
+   "item.urushi.brown_silk": "棕色绢布",
+   "item.urushi.green_silk": "绿色绢布",
+   "item.urushi.red_silk": "红色绢布",
+   "item.urushi.black_silk": "黑色绢布",
+   "block.urushi.silk_block": "绢布块",
+   "block.urushi.white_silk_block": "白色绢布块",
+   "block.urushi.orange_silk_block": "橙色绢布块",
+   "block.urushi.magenta_silk_block": "品红色绢布块",
+   "block.urushi.light_blue_silk_block": "淡蓝色绢布块",
+   "block.urushi.yellow_silk_block": "黄色绢布块",
+   "block.urushi.lime_silk_block": "黄绿色绢布块",
+   "block.urushi.pink_silk_block": "粉色绢布块",
+   "block.urushi.gray_silk_block": "灰色绢布块",
+   "block.urushi.light_gray_silk_block": "淡灰色绢布块",
+   "block.urushi.cyan_silk_block": "青色绢布块",
+   "block.urushi.purple_silk_block": "紫色绢布块",
+   "block.urushi.blue_silk_block": "蓝色绢布块",
+   "block.urushi.brown_silk_block": "棕色绢布块",
+   "block.urushi.green_silk_block": "绿色绢布块",
+   "block.urushi.red_silk_block": "红色绢布块",
+   "block.urushi.black_silk_block": "黑色绢布块",
+   "item.urushi.kakuriyo_villager_spawn_egg": "幽世村民刷怪蛋",
+   "info.urushi.hibachi": "在上方放置茶壶以制作绿茶",
+   "sounds.urushi.urushi_advancements": "漆MOD：获得成就",
+   "entity.urushi.green_tea_food": "绿茶",
+   "item.urushi.mandarin": "橘子",
+   "entity.urushi.mandarin_food": "橘子",
+   "item.urushi.mandarin_slice": "橘子瓣",
+   "block.urushi.mandarin_sapling": "橘树树苗",
+   "block.urushi.mandarin_leaves": "橘树树叶",
+   "block.urushi.kotatsu": "被炉",
+
+  "#comment-furigana-start": "↓No need to translate furiganas / 无需翻译假名注音",
+  "info.urushi.furigana.ryokusyou": "緑青(りょくしょう)",
+  "info.urushi.furigana.seiroku": "青緑(せいろく)",
+  "info.urushi.furigana.kaya": "茅(かや)",
+  "info.urushi.furigana.hiwada": "檜皮(ひわだ)",
+  "info.urushi.furigana.goza": "茣蓙(ござ)",
+  "info.urushi.furigana.nozura": "野面(のづら)",
+  "info.urushi.furigana.tansu": "箪笥(たんす)",
+  "info.urushi.furigana.andon": "行燈(あんどん)",
+  "info.urushi.furigana.ariake_andon": "有明行燈(ありあけあんどん)",
+  "info.urushi.furigana.kasuga_tourou": "春日灯篭(かすがとうろう)",
+  "info.urushi.furigana.chochin": "提灯(ちょうちん)",
+  "info.urushi.furigana.giboshi": "擬宝珠(ぎぼし)",
+  "info.urushi.furigana.fusuma": "襖(ふすま)",
+  "info.urushi.furigana.sayagata": "紗綾形(さやがた)",
+  "info.urushi.furigana.seigaiha": "青海波(せいがいは)",
+  "info.urushi.furigana.noren": "暖簾(のれん)",
+  "info.urushi.furigana.tensuioke": "天水桶(てんすいおけ)",
+  "info.urushi.furigana.kaiko": "蚕(かいこ)",
+  "info.urushi.furigana.yousan": "養蚕(ようさん)",
+  "info.urushi.furigana.mayu": "繭(まゆ)",
+  "info.urushi.furigana.kinuito": "絹糸(きぬいと)",
+  "info.urushi.furigana.kempu": "絹布(けんぷ)",
+  "info.urushi.furigana.kakuriyo": "幽世(かくりよ)",
+  "info.urushi.furigana.yomi": "黄泉(よみ)",
+  "info.urushi.furigana.hisui": "翡翠(ひすい)",
+  "info.urushi.furigana.manjusyage": "曼珠沙華(まんじゅしゃげ)",
+  "info.urushi.furigana.kanazuchi": "金槌(かなづち)",
+  "info.urushi.furigana.shikkui": "漆喰(しっくい)",
+  "info.urushi.furigana.namako": "生子(なまこ)",
+  "info.urushi.furigana.kiurushi": "生漆(きうるし)",
+  "info.urushi.furigana.syuurushi": "朱漆(しゅうるし)",
+  "info.urushi.furigana.kurourushi": "黒漆(くろうるし)",
+  "info.urushi.furigana.shitamiita": "下見板張り(したみいたばり)",
+  "info.urushi.furigana.rankan": "欄干(らんかん)",
+  "info.urushi.furigana.takebushiramma": "竹節欄間(たけぶしらんま)",
+  "info.urushi.furigana.musourenji": "無双連子(むそうれんじ)",
+  "info.urushi.furigana.hinoki": "檜(ひのき)",
+  "info.urushi.furigana.urushi": "漆(うるし)",
+  "info.urushi.furigana.ramma_shoji": "欄間障子(らんましょうじ)",
+  "info.urushi.furigana.shoji_do": "障子戸(しょうじど)",
+  "info.urushi.furigana.keikaboku": "珪化木(けいかぼく)",
+  "info.urushi.furigana.kohaku": "琥珀(こはく)",
+  "info.urushi.furigana.shichirin": "七輪(しちりん)",
+  "info.urushi.furigana.sanbo": "三方(さんぼう)",
+  "info.urushi.furigana.onusa": "大幣(おおぬさ)",
+  "info.urushi.furigana.hokora": "祠(ほこら)",
+  "info.urushi.furigana.tsuta": "蔦(つた)",
+  "info.urushi.furigana.kambatsu": "旱魃(かんばつ)",
+  "info.urushi.furigana.toge": "棘(とげ)",
+  "info.urushi.furigana.janomegasa": "蛇の目傘(じゃのめがさ)",
+  "info.urushi.furigana.shide": "紙垂(しで)",
+  "info.urushi.furigana.magatama": "勾玉(まがたま)",
+  "info.urushi.furigana.hiuchigane": "火打金(ひうちがね)",
+  "info.urushi.furigana.assakuki": "圧搾機(あっさくき)",
+  "info.urushi.furigana.momi": "籾(もみ)",
+  "info.urushi.furigana.kanten": "寒天(かんてん)",
+  "info.urushi.furigana.komekouji": "米麴(こめこうじ)",
+  "info.urushi.furigana.yokan": "羊羹(ようかん)",
+  "info.urushi.furigana.hiyayakko": "冷奴(ひややっこ)",
+  "info.urushi.furigana.so": "蘇(そ)",
+  "info.urushi.furigana.ayu": "鮎(あゆ)",
+  "#comment-furigana-end": "↑No need to translate furiganas / 无需翻译假名注音",
+
+  "block.urushi.concrete_block_wall": "混凝土墙",
+  "block.urushi.limonite_ore": "褐铁矿",
+  "block.urushi.chalcopyrite_ore": "黄铜矿",
+  "block.urushi.smooth_mangrove_planks": "平滑红树木板",
+  "block.urushi.smooth_mangrove_slab": "平滑红树木台阶",
+  "block.urushi.smooth_mangrove_stairs": "平滑红树木楼梯",
+  "block.urushi.mangrove_parapet": "红树木栏杆",
+  "block.urushi.mangrove_framed_plaster": "红树木框灰泥",
+  "block.urushi.mangrove_bars": "红树木屏风柱",
+  "block.urushi.mangrove_fushiranma": "红树木叉型门上窗",
+  "block.urushi.mangrove_framed_wattle_and_daub": "红树木框土坯",
+  "block.urushi.mangrove_framed_sand_coast": "红树木框砂墙",
+  "block.urushi.mangrove_shitamiita": "红树木楔纹板",
+  "block.urushi.mangrove_shitamiita_slab": "红树木楔纹板台阶",
+  "block.urushi.mangrove_board_window": "红树木直棂推拉窗",
+  "block.urushi.mangrove_framed_orange_plaster": "红树木框橙色灰泥",
+  "block.urushi.mangrove_framed_magenta_plaster": "红树木框品红色灰泥",
+  "block.urushi.mangrove_framed_light_blue_plaster": "红树木框淡蓝色灰泥",
+  "block.urushi.mangrove_framed_yellow_plaster": "红树木框黄色灰泥",
+  "block.urushi.mangrove_framed_lime_plaster": "红树木框黄绿色灰泥",
+  "block.urushi.mangrove_framed_pink_plaster": "红树木框粉色灰泥",
+  "block.urushi.mangrove_framed_gray_plaster": "红树木框灰色灰泥",
+  "block.urushi.mangrove_framed_light_gray_plaster": "红树木框淡灰色灰泥",
+  "block.urushi.mangrove_framed_cyan_plaster": "红树木框青色灰泥",
+  "block.urushi.mangrove_framed_purple_plaster": "红树木框紫色灰泥",
+  "block.urushi.mangrove_framed_blue_plaster": "红树木框蓝色灰泥",
+  "block.urushi.mangrove_framed_brown_plaster": "红树木框棕色灰泥",
+  "block.urushi.mangrove_framed_green_plaster": "红树木框绿色灰泥",
+  "block.urushi.mangrove_framed_red_plaster": "红树木框红色灰泥",
+  "block.urushi.mangrove_framed_black_plaster": "红树木框红色灰泥",
+  "block.urushi.mangrove_wall_for_framed_blocks": "红树木墙板",
+  "block.urushi.vertical_smooth_mangrove_slab": "平滑红树木竖直台阶",
+  "block.urushi.horizontal_mangrove_bars": "红树木横向屏风柱",
+  "block.urushi.smooth_cherry_planks": "平滑樱花木板",
+  "block.urushi.smooth_cherry_slab": "平滑樱花木台阶",
+  "block.urushi.smooth_cherry_stairs": "平滑樱花木楼梯",
+  "block.urushi.cherry_parapet": "樱花木栏杆",
+  "block.urushi.cherry_framed_plaster": "樱花木框灰泥",
+  "block.urushi.cherry_bars": "樱花木屏风柱",
+  "block.urushi.cherry_fushiranma": "樱花木叉型门上窗",
+  "block.urushi.cherry_framed_wattle_and_daub": "樱花木框土坯",
+  "block.urushi.cherry_framed_sand_coast": "樱花木框砂墙",
+  "block.urushi.cherry_shitamiita": "樱花木楔纹板",
+  "block.urushi.cherry_shitamiita_slab": "樱花木楔纹板台阶",
+  "block.urushi.cherry_board_window": "樱花木直棂推拉窗",
+  "block.urushi.cherry_framed_orange_plaster": "樱花木框橙色灰泥",
+  "block.urushi.cherry_framed_magenta_plaster": "樱花木框品红色灰泥",
+  "block.urushi.cherry_framed_light_blue_plaster": "樱花木框淡蓝色灰泥",
+  "block.urushi.cherry_framed_yellow_plaster": "樱花木框黄色灰泥",
+  "block.urushi.cherry_framed_lime_plaster": "樱花木框黄绿色灰泥",
+  "block.urushi.cherry_framed_pink_plaster": "樱花木框粉色灰泥",
+  "block.urushi.cherry_framed_gray_plaster": "樱花木框灰色灰泥",
+  "block.urushi.cherry_framed_light_gray_plaster": "樱花木框淡灰色灰泥",
+  "block.urushi.cherry_framed_cyan_plaster": "樱花木框青色灰泥",
+  "block.urushi.cherry_framed_purple_plaster": "樱花木框紫色灰泥",
+  "block.urushi.cherry_framed_blue_plaster": "樱花木框蓝色灰泥",
+  "block.urushi.cherry_framed_brown_plaster": "樱花木框棕色灰泥",
+  "block.urushi.cherry_framed_green_plaster": "樱花木框绿色灰泥",
+  "block.urushi.cherry_framed_red_plaster": "樱花木框红色灰泥",
+  "block.urushi.cherry_framed_black_plaster": "樱花木框红色灰泥",
+  "block.urushi.cherry_wall_for_framed_blocks": "樱花木墙板",
+  "block.urushi.vertical_smooth_cherry_slab": "平滑樱花木竖直台阶",
+  "block.urushi.horizontal_cherry_bars": "樱花木横向屏风柱",
+  "block.urushi.smooth_pale_oak_planks": "平滑苍白橡木木板",
+  "block.urushi.smooth_pale_oak_slab": "平滑苍白橡木台阶",
+  "block.urushi.smooth_pale_oak_stairs": "平滑苍白橡木楼梯",
+  "block.urushi.pale_oak_parapet": "苍白橡木栏杆",
+  "block.urushi.pale_oak_framed_plaster": "苍白橡木框灰泥",
+  "block.urushi.pale_oak_bars": "苍白橡木屏风柱",
+  "block.urushi.pale_oak_fushiranma": "苍白橡木叉型门上窗",
+  "block.urushi.pale_oak_framed_wattle_and_daub": "苍白橡木框土坯",
+  "block.urushi.pale_oak_framed_sand_coast": "苍白橡木框砂墙",
+  "block.urushi.pale_oak_shitamiita": "苍白橡木楔纹板",
+  "block.urushi.pale_oak_shitamiita_slab": "苍白橡木楔纹板台阶",
+  "block.urushi.pale_oak_board_window": "苍白橡木直棂推拉窗",
+  "block.urushi.pale_oak_framed_orange_plaster": "苍白橡木框橙色灰泥",
+  "block.urushi.pale_oak_framed_magenta_plaster": "苍白橡木框品红色灰泥",
+  "block.urushi.pale_oak_framed_light_blue_plaster": "苍白橡木框淡蓝色灰泥",
+  "block.urushi.pale_oak_framed_yellow_plaster": "苍白橡木框黄色灰泥",
+  "block.urushi.pale_oak_framed_lime_plaster": "苍白橡木框黄绿色灰泥",
+  "block.urushi.pale_oak_framed_pink_plaster": "苍白橡木框粉色灰泥",
+  "block.urushi.pale_oak_framed_gray_plaster": "苍白橡木框灰色灰泥",
+  "block.urushi.pale_oak_framed_light_gray_plaster": "苍白橡木框淡灰色灰泥",
+  "block.urushi.pale_oak_framed_cyan_plaster": "苍白橡木框青色灰泥",
+  "block.urushi.pale_oak_framed_purple_plaster": "苍白橡木框紫色灰泥",
+  "block.urushi.pale_oak_framed_blue_plaster": "苍白橡木框蓝色灰泥",
+  "block.urushi.pale_oak_framed_brown_plaster": "苍白橡木框棕色灰泥",
+  "block.urushi.pale_oak_framed_green_plaster": "苍白橡木框绿色灰泥",
+  "block.urushi.pale_oak_framed_red_plaster": "苍白橡木框红色灰泥",
+  "block.urushi.pale_oak_framed_black_plaster": "苍白橡木框红色灰泥",
+  "block.urushi.pale_oak_wall_for_framed_blocks": "苍白橡木墙板",
+  "block.urushi.vertical_smooth_pale_oak_slab": "平滑苍白橡木竖直台阶",
+  "block.urushi.horizontal_pale_oak_bars": "苍白橡木横向屏风柱",
+  "block.urushi.smooth_crimson_planks": "平滑绯红木板",
+  "block.urushi.smooth_crimson_slab": "平滑绯红木台阶",
+  "block.urushi.smooth_crimson_stairs": "平滑绯红木楼梯",
+  "block.urushi.crimson_framed_plaster": "绯红木框灰泥",
+  "block.urushi.crimson_framed_wattle_and_daub": "绯红木框土坯",
+  "block.urushi.crimson_framed_sand_coast": "绯红木框砂墙",
+  "block.urushi.crimson_framed_orange_plaster": "绯红木框橙色灰泥",
+  "block.urushi.crimson_framed_magenta_plaster": "绯红木框品红色灰泥",
+  "block.urushi.crimson_framed_light_blue_plaster": "绯红木框淡蓝色灰泥",
+  "block.urushi.crimson_framed_yellow_plaster": "绯红木框黄色灰泥",
+  "block.urushi.crimson_framed_lime_plaster": "绯红木框黄绿色灰泥",
+  "block.urushi.crimson_framed_pink_plaster": "绯红木框粉色灰泥",
+  "block.urushi.crimson_framed_gray_plaster": "绯红木框灰色灰泥",
+  "block.urushi.crimson_framed_light_gray_plaster": "绯红木框淡灰色灰泥",
+  "block.urushi.crimson_framed_cyan_plaster": "绯红木框青色灰泥",
+  "block.urushi.crimson_framed_purple_plaster": "绯红木框紫色灰泥",
+  "block.urushi.crimson_framed_blue_plaster": "绯红木框蓝色灰泥",
+  "block.urushi.crimson_framed_brown_plaster": "绯红木框棕色灰泥",
+  "block.urushi.crimson_framed_green_plaster": "绯红木框绿色灰泥",
+  "block.urushi.crimson_framed_red_plaster": "绯红木框红色灰泥",
+  "block.urushi.crimson_framed_black_plaster": "绯红木框红色灰泥",
+  "block.urushi.crimson_wall_for_framed_blocks": "绯红木墙板",
+  "block.urushi.vertical_smooth_crimson_slab": "平滑绯红木竖直台阶",
+  "block.urushi.smooth_warped_planks": "平滑诡异木板",
+  "block.urushi.smooth_warped_slab": "平滑诡异木台阶",
+  "block.urushi.smooth_warped_stairs": "平滑诡异木楼梯",
+  "block.urushi.warped_framed_plaster": "诡异木框灰泥",
+  "block.urushi.warped_framed_wattle_and_daub": "诡异木框土坯",
+  "block.urushi.warped_framed_sand_coast": "诡异木框砂墙",
+  "block.urushi.warped_framed_orange_plaster": "诡异木框橙色灰泥",
+  "block.urushi.warped_framed_magenta_plaster": "诡异木框品红色灰泥",
+  "block.urushi.warped_framed_light_blue_plaster": "诡异木框淡蓝色灰泥",
+  "block.urushi.warped_framed_yellow_plaster": "诡异木框黄色灰泥",
+  "block.urushi.warped_framed_lime_plaster": "诡异木框黄绿色灰泥",
+  "block.urushi.warped_framed_pink_plaster": "诡异木框粉色灰泥",
+  "block.urushi.warped_framed_gray_plaster": "诡异木框灰色灰泥",
+  "block.urushi.warped_framed_light_gray_plaster": "诡异木框淡灰色灰泥",
+  "block.urushi.warped_framed_cyan_plaster": "诡异木框青色灰泥",
+  "block.urushi.warped_framed_purple_plaster": "诡异木框紫色灰泥",
+  "block.urushi.warped_framed_blue_plaster": "诡异木框蓝色灰泥",
+  "block.urushi.warped_framed_brown_plaster": "诡异木框棕色灰泥",
+  "block.urushi.warped_framed_green_plaster": "诡异木框绿色灰泥",
+  "block.urushi.warped_framed_red_plaster": "诡异木框红色灰泥",
+  "block.urushi.warped_framed_black_plaster": "诡异木框红色灰泥",
+  "block.urushi.warped_wall_for_framed_blocks": "诡异木壁",
+  "block.urushi.vertical_smooth_warped_slab": "平滑诡异木竖直台阶",
+  "info.urushi.same_as_composter": "和堆肥桶类似，右击或使用漏斗以放入物品。",
+  "info.urushi.fermentation_barrel_1": "放入8个米饭会转换为8个酒曲，8个味噌曲会转换为8个味噌。",
+  "info.urushi.fermentation_barrel_2": "放入1个米饭、1个酒曲、1个水竹筒并放置后，使用玻璃瓶可以获得清酒。",
+  "info.urushi.ochoko_1": "饮用后会获得抗性提升与缓慢效果。",
+  "info.urushi.ochoko_2": "多次连续饮用会提升效果的等级与持续时间，但是……",
+  "info.urushi.sake": "在发酵桶内放入1个米饭、1个酒曲、1个水竹筒并放置后，对发酵桶使用玻璃瓶即可获得。",
+  "info.urushi.noodle": "主手持切面刀、副手持面条面团、按住右键可以快速切面。",
+  "item.urushi.sake": "清酒",
+  "item.urushi.tokkuri": "清酒壶",
+  "item.urushi.ochoko": "清酒杯",
+  "entity.urushi.sake_food": "清酒",
+  "entity.urushi.tokkuri_food": "清酒壶",
+  "entity.urushi.ochoko_food": "清酒杯",
+  "container.urushi.kakuriyo_villager_jobless": "幽世の住人 (職無し)",
+  "container.urushi.kakuriyo_villager_cook": "幽世の住人 (料理屋)",
+  "container.urushi.kakuriyo_villager_miner": "幽世の住人 (石屋)",
+  "container.urushi.kakuriyo_villager_fisherman": "幽世の住人 (釣り人)",
+  "container.urushi.kakuriyo_villager_lumberjack": "幽世の住人 (材木屋)",
+  "container.urushi.kakuriyo_villager_rice_dealer": "幽世の住人 (米問屋)",
+  "info.urushi.rice_ball_with_filling_random": "取引する度に効果が変わります",
+  "info.urushi.kakuriyo_villager_jobless": "この幽世の住人は職無しです",
+  "entity.urushi.kakuriyo_villager": "幽世の住人",
+  "item.urushi.crush_jufu": "打ち潰しの符",
+  "item.urushi.explosion_jufu": "爆発の符",
+  "item.urushi.crush_jufu_stamp": "打ち潰しの符のハンコ",
+  "item.urushi.explosion_jufu_stamp": "爆発の符のハンコ",
+  "info.urushi.crush_jufu1": "モブの頭上に金床を召喚してダメージを与える。",
+  "info.urushi.crush_jufu2": "金床によるダメージはプレイヤーによる攻撃扱いとなりレアドロップや経験値が手に入る。",
+  "info.urushi.explosion_jufu1": "着弾地点を爆破する。",
+  "info.urushi.explosion_jufu2": "爆発によるダメージはプレイヤーによる攻撃扱いとなりレアドロップや経験値が手に入る。",
+  "book.urushi.chronicles1": "幽世神記は製作途中の要素なため、この部分の翻訳はまだしないでください。",
+  "info.urushi.crop2": "クワで草ブロックを耕して入手しよう。",
+  "info.urushi.tea_bush": "幽世の街で料理屋と取引して入手しよう",
+  "info.urushi.tea_leaf": "茶葉の茂みを栽培して手に入れよう",
+  "gui.jei.category.urushi.kettle": "お茶淹れ",
+  "gui.jei.category.urushi.rainwater_tank": "加水",
+  "gui.jei.category.urushi.rainwater_tank.text": "右クリック",
+  "info.urushi.coin": "最大6個まで重ねて設置できる。",
+  "info.urushi.rainwater_tank1": "水を入れるとバケツなどで無限に水を取り出せる。",
+  "info.urushi.rainwater_tank2": "土を泥にしたり、コンクリートパウダーをコンクリートに固めたり、銅ブロックを錆びさせたりできる。"
+
 
 }
