zh_cn translation ok for 6.5.0

--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -2837,32 +2837,33 @@
   "entity.urushi.tokkuri_food": "清酒壶",
   "entity.urushi.ochoko_food": "清酒杯",
   "container.urushi.kakuriyo_villager_jobless": "无业 - 幽世村民",
-  "container.urushi.kakuriyo_villager_cook": "幽世の住人 (料理屋)",
-  "container.urushi.kakuriyo_villager_miner": "幽世の住人 (石屋)",
-  "container.urushi.kakuriyo_villager_fisherman": "幽世の住人 (釣り人)",
-  "container.urushi.kakuriyo_villager_lumberjack": "幽世の住人 (材木屋)",
-  "container.urushi.kakuriyo_villager_rice_dealer": "幽世の住人 (米問屋)",
-  "info.urushi.rice_ball_with_filling_random": "取引する度に効果が変わります",
-  "info.urushi.kakuriyo_villager_jobless": "この幽世の住人は職無しです",
-  "entity.urushi.kakuriyo_villager": "幽世の住人",
-  "item.urushi.crush_jufu": "打ち潰しの符",
-  "item.urushi.explosion_jufu": "爆発の符",
-  "item.urushi.crush_jufu_stamp": "打ち潰しの符のハンコ",
-  "item.urushi.explosion_jufu_stamp": "爆発の符のハンコ",
-  "info.urushi.crush_jufu1": "モブの頭上に金床を召喚してダメージを与える。",
-  "info.urushi.crush_jufu2": "金床によるダメージはプレイヤーによる攻撃扱いとなりレアドロップや経験値が手に入る。",
-  "info.urushi.explosion_jufu1": "着弾地点を爆破する。",
-  "info.urushi.explosion_jufu2": "爆発によるダメージはプレイヤーによる攻撃扱いとなりレアドロップや経験値が手に入る。",
-  "book.urushi.chronicles1": "幽世神記は製作途中の要素なため、この部分の翻訳はまだしないでください。",
-  "info.urushi.crop2": "クワで草ブロックを耕して入手しよう。",
-  "info.urushi.tea_bush": "幽世の街で料理屋と取引して入手しよう",
-  "info.urushi.tea_leaf": "茶葉の茂みを栽培して手に入れよう",
-  "gui.jei.category.urushi.kettle": "お茶淹れ",
-  "gui.jei.category.urushi.rainwater_tank": "加水",
-  "gui.jei.category.urushi.rainwater_tank.text": "右クリック",
-  "info.urushi.coin": "最大6個まで重ねて設置できる。",
-  "info.urushi.rainwater_tank1": "水を入れるとバケツなどで無限に水を取り出せる。",
-  "info.urushi.rainwater_tank2": "土を泥にしたり、コンクリートパウダーをコンクリートに固めたり、銅ブロックを錆びさせたりできる。"
+  "container.urushi.kakuriyo_villager_cook": "厨师 - 幽世村民",
+  "container.urushi.kakuriyo_villager_miner": "矿工 - 幽世村民",
+  "container.urushi.kakuriyo_villager_fisherman": "渔夫 - 幽世村民",
+  "container.urushi.kakuriyo_villager_lumberjack": "伐木工 - 幽世村民",
+  "container.urushi.kakuriyo_villager_rice_dealer": "米商 - 幽世村民",
+  "info.urushi.rice_ball_with_filling_random": "每次交易时饭团的效果都会随机变化",
+  "info.urushi.kakuriyo_villager_jobless": "这个幽世村民没有职业",
+  "entity.urushi.kakuriyo_villager": "幽世村民",
+  "item.urushi.crush_jufu": "打溃之符",
+  "item.urushi.explosion_jufu": "爆发之符",
+  "item.urushi.crush_jufu_stamp": "打溃之符刻印",
+  "item.urushi.explosion_jufu_stamp": "爆炸之符刻印",
+  "info.urushi.crush_jufu1": "在生物的头上召唤铁砧并造成伤害。",
+  "info.urushi.crush_jufu2": "铁砧造成的伤害视作玩家造成的伤害，且生物死亡时会掉落经验及稀有掉落物等。",
+  "info.urushi.explosion_jufu1": "在击中的位置产生爆炸。",
+  "info.urushi.explosion_jufu2": "爆炸伤害视作玩家造成的伤害，且生物死亡时会掉落经验及稀有掉落物等。",
+  "book.urushi.chronicles1": "“幽世神记”（暂译）尚在制作中，还请暂时不要翻译这部分的内容。",
+  "info.urushi.crop2": "对草方块使用锄进行耕地以获取",
+  "info.urushi.tea_bush": "在幽世村镇里与厨师职业的幽世村民交易以获取",
+  "info.urushi.tea_leaf": "培育茶叶树丛以获取",
+  "gui.jei.category.urushi.kettle": "泡茶",
+  "gui.jei.category.urushi.rainwater_tank": "浸水",
+  "gui.jei.category.urushi.rainwater_tank.text": "右击",
+  "info.urushi.coin": "可在地面上使用以放置，同一格内最多6个。",
+  "info.urushi.rainwater_tank1": "内部有水时，可以使用桶从中无限取出水。",
+  "info.urushi.rainwater_tank2": "可以将泥土变为泥巴、将混凝土粉末固化成混凝土、以及腐蚀铜块。",
+  "entity.urushi.experience_droppable_falling_anvil": "铁砧"
 
 
 }
