traditionalize zh_tw.json, with minor fixes on zh_cn.json

--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -2611,7 +2611,7 @@
    "block.urushi.black_silk_block": "黑色绢布块",
    "item.urushi.kakuriyo_villager_spawn_egg": "幽世村民刷怪蛋",
    "info.urushi.hibachi": "在上方放置茶壶以制作绿茶",
-   "sounds.urushi.urushi_advancements": "漆MOD：获得成就",
+   "sounds.urushi.urushi_advancements": "漆MOD：完成进度",
    "entity.urushi.green_tea_food": "绿茶",
    "item.urushi.mandarin": "橘子",
    "entity.urushi.mandarin_food": "橘子",
@@ -2829,7 +2829,7 @@
   "info.urushi.ochoko_1": "饮用后会获得抗性提升与缓慢效果。",
   "info.urushi.ochoko_2": "多次连续饮用会提升效果的等级与持续时间，但是……",
   "info.urushi.sake": "在发酵桶内放入1个米饭、1个酒曲、1个水竹筒并放置后，对发酵桶使用玻璃瓶即可获得。",
-  "info.urushi.noodle": "主手持切面刀、副手持面条面团、按住右键可以快速切面。",
+  "info.urushi.noodle": "主手持切面刀、副手持面条面团、按住使用键可以快速切面。",
   "item.urushi.sake": "清酒",
   "item.urushi.tokkuri": "清酒壶",
   "item.urushi.ochoko": "清酒杯",
@@ -2852,7 +2852,7 @@
   "info.urushi.crush_jufu1": "在生物的头上召唤铁砧并造成伤害。",
   "info.urushi.crush_jufu2": "铁砧造成的伤害视作玩家造成的伤害，且生物死亡时会掉落经验及稀有掉落物等。",
   "info.urushi.explosion_jufu1": "在击中的位置产生爆炸。",
-  "info.urushi.explosion_jufu2": "爆炸伤害视作玩家造成的伤害，且生物死亡时会掉落经验及稀有掉落物等。",
+  "info.urushi.explosion_jufu2": "造成的爆炸伤害视作玩家造成的伤害，且生物死亡时会掉落经验及稀有掉落物等。",
   "book.urushi.chronicles1": "“幽世神记”（暂译）尚在制作中，还请暂时不要翻译这部分的内容。",
   "info.urushi.crop2": "对草方块使用锄进行耕地以获取",
   "info.urushi.tea_bush": "在幽世村镇里与厨师职业的幽世村民交易以获取",
@@ -2860,8 +2860,8 @@
   "gui.jei.category.urushi.kettle": "泡茶",
   "gui.jei.category.urushi.rainwater_tank": "浸水",
   "gui.jei.category.urushi.rainwater_tank.text": "右击",
-  "info.urushi.coin": "可在地面上使用以放置，同一格内最多6个。",
-  "info.urushi.rainwater_tank1": "内部有水时，可以使用桶从中无限取出水。",
+  "info.urushi.coin": "可在地面上使用以放置，同一格内最多可放置6个。",
+  "info.urushi.rainwater_tank1": "里面存有水时，可以使用桶从中无限取出水。",
   "info.urushi.rainwater_tank2": "可以将泥土变为泥巴、将混凝土粉末固化成混凝土、以及腐蚀铜块。",
   "entity.urushi.experience_droppable_falling_anvil": "铁砧"
 
